--- a/templates/index.html
+++ b/templates/index.html
@@ -4,8 +4,11 @@
 	<div class="homepage-div">
 	<h1>What do you want to learn about?</h1>
 	<form action='/search'>
-		<input type="text" name="search"></input>
+		<input type="text" name="search" required></input>
 		<input type="submit" value="Find a class!"></input>
 	</form>
+<!-- 	<form action='/browse'>
+		<input type="submit" value="Browse all courses"></input>
+	</form> -->
 	</div>
 {% endblock %}
