--- a/static/styles.css
+++ b/static/styles.css
@@ -109,3 +109,25 @@ input {
 /*li + input {
 	font-size: 12px;
 }*/
+a {
+	color: inherit;
+	text-decoration: none;
+}
+
+a:hover 
+{
+     color: inherit; 
+     text-decoration: none; 
+}
+
+a:visited 
+{
+     color: inherit; 
+     text-decoration: none; 
+}
+
+a:active 
+{
+     color: inherit; 
+     text-decoration: none; 
+}
