--- a/templates/base.html
+++ b/templates/base.html
@@ -27,7 +27,7 @@
       {% endif %}
     </ul>
   </div>
-  </nav><br>
+  </nav><br><br><br><br>
   {% with messages = get_flashed_messages() %}
 		{% if messages %}
 			{% for message in messages %}
