--- a/templates/login.html
+++ b/templates/login.html
@@ -1,7 +1,7 @@
 {% extends 'base.html' %}
 {% block title %}Login to Emily's Online Courses{% endblock %}
 {% block content %}
-	<div>
+	<div id="login div">
 	<form action="/login" method="POST">
 		<h3>Log in!</h3>
 		email address: <input type="text" name="email" required></input><br>
