--- a/templates/user_profile.html
+++ b/templates/user_profile.html
@@ -6,7 +6,7 @@
 			<a href="/">Start searching for classes</a>
 		</h3>
 	{% if fav_courses %}		
-		<h3 class="class-heading">Classes you'd like to take:</h3><br>
+		<h3 id="fav-heading" class="class-heading">Classes you'd like to take:</h3><br>
 		{% for course in fav_courses %}
 		<div id="{{ course.course_id }}" class="course-div">
 			<div id ="course-{{ course.course_id }}" class="media well profile">
@@ -24,10 +24,10 @@
 		</div>
 		{% endfor %}		
 	{% endif %}
-
+	<span id="unfav-msg"></span>
 	{% if taken_courses %}
 		<div id="taken">
-			<h3 class="class-heading">Classes you have taken:</h3><br>
+			<h3 id="taken-heading" class="class-heading">Classes you have taken:</h3><br>
 			{% for course in taken_courses %}
 			<div id="{{ course.course_id }}">
 				<div id ="coursediv-{{ course.course_id }}" class="media well profile">
@@ -39,6 +39,28 @@
 	  				<div class="media-body">
 	    				<h4 class="media-heading">{{ course.title }}</h4>
 						<button type="button" class="btn btn-danger btn-xs remove-course" data-course-id="{{ course.course_id }}">Remove</button>
+					</div>
+				</div>
+			</div>
+			{% endfor %}
+		</div>		
+	{% endif %}
+	<span id="untaken-msg"></span>
+		{% if enrolled_courses %}
+		<div id="enrolled">
+			<h3 id="enrolled-heading" class="class-heading">Classes you are enrolled in:</h3><br>
+			{% for course in enrolled_courses %}
+			<div id="{{ course.course_id }}">
+				<div id ="coursediv-{{ course.course_id }}" class="media well profile">
+					<div class="media-left media-middle">
+						<a href="{{ course.url }}">
+	      					<img class="media-object" src="{{ course.picture }}" alt="course pic">
+	    				</a>
+	  				</div>
+	  				<div class="media-body">
+	    				<h4 class="media-heading">{{ course.title }}</h4>
+						<button type="button" class="btn btn-danger btn-xs unenroll" data-course-id="{{ course.course_id }}">Remove</button>
+						<button type="button" class="btn btn-danger btn-xs move-to-completed-course" data-course-id="{{ course.course_id }}">Finished</button>
 					</div>
 				</div>
 			</div>
