--- a/templates/search.html
+++ b/templates/search.html
@@ -636,7 +636,7 @@
       				<img class="media-object" src="{{ course.picture }}" alt="course pic">
   				</div>
   			<div class="media-body">
-  				<a href="{{ course.url }}" target="_blank">
+  				<a href="{{ course.url }}" id="course-url" target="_blank">
     			<h4 class="media-heading">{{ course.title }}</h4>
     			<p>{{ course.description[:350] }}</p>
      			{% if course.workload %}
@@ -648,8 +648,9 @@
      			{% else%}
      				Free
      			{% endif %}</p></a>
-     			<button type="button" id="{{ course.course_id}}" class="btn btn-danger favorite-button btn-xs">Favorite</button>
-     			<button type="button" id="{{ course.course_id}}" class="btn btn-success taken-button btn-xs">Taken</button><div id="favorite-taken-message"></div>
+     			<button type="button" id="{{ course.course_id }}" class="btn btn-danger favorite-button btn-xs">Favorite</button>
+     			<button type="button" id="{{ course.course_id }}" class="btn btn-success taken-button btn-xs">Taken</button>
+     			<button type="button" id="{{ course.course_id }}" class="btn btn-success enrolled-button btn-xs">Enrolled</button><p id="btn-response-msg-{{ course.course_id }}"></p>
   			</div>
 			</div>
 			{% endfor %}
