Added testdb to start testing sqlalchemy queries; fixed bug in favoriting on results page; reordered courses on user_profile page; refactored out helper functions from server

--- a/templates/base.html
+++ b/templates/base.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-	<title>{% block title %}Emily's Online Courses{% endblock %}</title>
+	<title>{% block title %}ClassAmass{% endblock %}</title>
 	<link href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css" rel="stylesheet">
 	<link href="//maxcdn.bootstrapcdn.com/font-awesome/4.2.0/css/font-awesome.min.css" rel="stylesheet">
 	<link rel="stylesheet" href="/static/styles.css">
@@ -11,7 +11,7 @@
 	<nav class="navbar navbar-default navbar-fixed-top">
   	<div class="container-fluid">
     <div class="navbar-header">
-      <a class="navbar-brand" href="/">Emily's Online Classes</a>
+      <a class="navbar-brand" href="/">ClassAmass</a>
     </div>
     <ul class="nav navbar-nav">
       <li class="active"><a href="/">Home</a></li>
